Dom Eventslere örenkler incelendi

--- a/DOM_etkinlikleriyle_çalışmak/index.html
+++ b/DOM_etkinlikleriyle_çalışmak/index.html
@@ -5,10 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        #yellow, #purple {
+    width:70px;
+    height:70px;
+    border-radius:50%;
+    margin:15px;
+     }
+
+    #yellow{
+      background-color:yellow;
+    }
+
+    #purple{
+      background-color:rebeccaPurple;
+    }
+
+
+
+    </style>
 </head>
 <body>
     <h1 id="baslik">Kodluyoruz Frontend 101</h1>
     <h1 id="baslik2">Kodluyoruz Frontend 101-2</h1>
+
+
+    <form action="#" id="selectColor">
+        <label for="color">Choose a color</label>
+          <select name="colors" id="select">
+            <option value="red">RED</option>
+            <option value="blue">BLUE</option>
+            <option value="purple">PURPLE</option>
+            <option value="orange">ORANGE</option>
+            <option value="pink">PINK</option>
+          </select>
+          <br><br>
+        <input type="submit" value="Submit">
+      </form>   
+
+
+
+
+  <br><hr>
+  
+  <div class="container">  
+    <div><p id="text">SUBMIT FORM </p> </div>
+      <form action="/action_page.php" class="inputText">
+        <label for="fname" id="l1">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="John" > <br>
+        <label for="lname" id="l2">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="Doe" id="label2"><br><br>
+      </form>
+      <button type="button" id="button" >Clicked me </button>
+      <form action="#" id="selectColor1">
+        <label for="color">Choose a color</label>
+          <select name="colors" id="select">
+          <option value="red">RED</option>
+          <option value="blue">BLUE</option>
+          <option value="purple">PURPLE</option>
+          <option value="orange">ORANGE</option>
+          <option value="pink">PINK</option>
+        </select>
+      <br><br>
+      </form>
+    </div>
+  </div>
+    
+
+<hr>
+
+
+
+<div id="text">
+    <div>
+    <input id="input" placeholder="write">
+    <div id="output" style="background-color:orange ;width:60%"> çıktı </div>
+   </div>
+  </div>
+
+<hr>
+<div id="yellow"></div>
+<div id="purple"></div>   
 
     <script src="app.js"></script>
 </body>
