--- a/Form ve Form Submit Yönetimi/index.html
+++ b/Form ve Form Submit Yönetimi/index.html
@@ -28,7 +28,8 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 ofset-sm2">
-            <form onsubmit="handleSubmit(e)" method="POST"><input type="text"name="username"placeholder="Kullanıcı adınızı giriniz"onchange="handleChange(event)"
+            <form onsubmit="handleSubmit(e)" method="POST">
+                <input type="text"name="username"placeholder="Kullanıcı adınızı giriniz"onchange="handleChange(event)"
                 /><input type="password"name="password"placeholder="Şifrenizi giriniz."onchange="handleChange(event)"
                 /><button type="submit">Giriş</button>
               </form>
