localstorage ekleme ve li de gösterme eklendi spane tıklandığı zaman localstoragedan silmeyi nasıl yapılacak bakılması lazım

--- a/Ödev2:Javascript ile To Do List/index.html
+++ b/Ödev2:Javascript ile To Do List/index.html
@@ -79,9 +79,7 @@
             placeholder="What Are You Doing Today?"
           />
 
-          <span onclick="newElement()" id="liveToastBtn" class="button"
-            >Add</span
-          >
+          <span onclick="taskAdd()" id="liveToastBtn" class="button">Add</span>
 
           <span
             onclick="clearList()"
