check clear butonu yazıldı

--- a/Ödev2:Javascript ile To Do List/index.html
+++ b/Ödev2:Javascript ile To Do List/index.html
@@ -82,13 +82,13 @@
           <span onclick="taskAdd()" id="liveToastBtn" class="button">Add</span>
 
           <span onclick="listCheck()" id="listCheckBtn" class="button col-mc-6"
-            >Check All</span
+            >Check Clear</span
           >
           <span
             onclick="CheckClear()"
             id="CheckClearBtn"
             class="button btn-danger"
-            >Check Clear</span
+            >Check List</span
           >
 
           <span onclick="clearList()" id="clearList" class="button btn-danger"
