--- a/Asian Kitchen's Menu/index.html
+++ b/Asian Kitchen's Menu/index.html
@@ -36,6 +36,6 @@
         </div>
       </section>
     </div>
-    <script src="app.js"></script>
+    <script src="app2.js"></script>
   </body>
 </html>
